--- a/node-package/build.gradle
+++ b/node-package/build.gradle
@@ -109,16 +109,11 @@ task buildFrontend {
 
 task buildDistrib {
     description = "Copies all artefacts needed to the node-package distrib folder"
-    dependsOn = [buildFrontend, ":command-line:build", ":compiler:download"]
+    dependsOn = [buildFrontend, ":command-line:build"]
 
     doLast {
         copy {
             from configurations.cliBinary
-            into "${DISTRIB_PATH}/build/runtime"
-        }
-
-        copy {
-            from project(":compiler").getTasksByName("download", true).outputs.files.singleFile[0]
             into "${DISTRIB_PATH}/build/runtime"
         }
     }
