Build with kotlin 1.6.10
this resolves #4

--- a/build.gradle
+++ b/build.gradle
@@ -27,13 +27,13 @@ allprojects {
         kotlinOptions {
           jvmTarget = '1.8'
           allWarningsAsErrors = true
-          freeCompilerArgs += "-Xuse-experimental=kotlin.Experimental"
+          freeCompilerArgs += "-Xopt-in=kotlin.Experimental"
         }
       }
 
       compileTestKotlin {
         kotlinOptions {
-          freeCompilerArgs += "-Xuse-experimental=kotlin.Experimental"
+          freeCompilerArgs += "-Xopt-in=kotlin.Experimental"
         }
       }
 
